--- a/PracticNetworking/PracticNetworking/Info.plist
+++ b/PracticNetworking/PracticNetworking/Info.plist
@@ -23,8 +23,9 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
-		<string>fetch</string>
+		<string>bgTask</string>
 		<string>processing</string>
+		<string>fetch</string>
 	</array>
 </dict>
 </plist>
